--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.16.0",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "typography": "^0.16.24"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
