--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react-helmet-async": "^1.3.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.16.0",
+    "react-simple-captcha": "^9.3.0",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.7.32",
     "typography": "^0.16.24"
   },
   "devDependencies": {
